# redmine-mcp-workflows

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  git-standards.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  release.yml  scorecard.yml  test.yml
.jules/: bolt.md
docker/: docker-compose.test.yml
docs/: differences-from-jztan.md  roadmap.md  tool-catalog.md  workflow-validation.md
src/redmine_mcp/: __init__.py  client.py  config.py  errors.py  secrets.py  server.py
src/redmine_mcp/cache/: __init__.py  migrations.py  schema_db.py
src/redmine_mcp/schema/: __init__.py  custom_fields.py  project.py  tracker.py  workflow.py
src/redmine_mcp/tools/: __init__.py  attachments.py  bulk.py  comments.py  custom_fields.py  discovery.py  enumerations.py  files.py  forums.py  groups.py  issue_categories.py  issue_statuses.py  issues.py  memberships.py  news.py  passthrough.py  projects.py  queries.py  relations.py  roles.py  search.py  time_entries.py  users.py  versions.py  watchers.py  wiki.py
src/redmine_mcp/validation/: __init__.py  fields.py  permissions.py  transitions.py
tests/: conftest.py  test_cache.py  test_client_auth.py  test_config.py  test_custom_fields_schema.py  test_schema.py  test_secrets.py  test_server_passthrough.py  test_validation.py
tests/test_tools/: test_attachments.py  test_bulk.py  test_comments.py  test_forums.py  test_groups.py  test_issue_categories.py  test_issues.py  test_memberships.py  test_news.py  test_passthrough.py  test_projects_crud.py  test_reference_data.py  test_relations.py  test_search.py  test_time_entries.py  test_users.py  test_versions.py  test_watchers.py  test_wiki.py
